src/_acf-general.scss
$border-color: #ccd0d4;

// Fix height of prepended labels.
.acf-input-prepend,
.acf-input-append {
  height: auto;
}

// Make textareas block elements so they don't have extra spacing underneath.
.acf-input textarea[name^="acf"] {
  margin-bottom: -1px;
}

// Bigger borders between repeater rows (except for the first row).
.acf-repeater.-row > table > tbody > tr:nth-child(n+2) > td,
.acf-repeater.-block > table > tbody > tr:nth-child(n+2) > td {
  border-top: 12px solid #ddd;
}

// Top-align cell numbers in repeater rows.
.acf-repeater .acf-row-handle {
  font-weight: bold;
  padding-top: 15px !important;
  vertical-align: top !important;
}

// Custom row classes.
.acf-field {
  // Hidden fields.
  &.__hidden,
  &.__hide {
    display: none;
  }

  // Bold inputs.
  &.__bold {
    & .acf-input input {
      font-weight: bold;
    }
  }

  // Italic inputs.
  &.__italic {
    & .acf-input input {
      font-style: italic;
    }
  }

  // Uppercase inputs.
  &.__uppercase {
    & .acf-input input {
      text-transform: uppercase;
    }
  }

  // Monospace/preformatted/code inputs.
  &.__code,
  &.__monospace {
    & .acf-input input,
    & .acf-input textarea {
      font-family: monospace;
    }
  }

  // Centered inputs.
  &.__center {
    & .acf-input input,
    & .acf-input textarea,
    & #tinymce body,
    & .acf-input p {
      text-align: center;
    }
  }

  // Big heading.
  &.__heading {
    & .acf-input-wrap input {

      font-size: 26px;
      font-weight: bold;
      height: 40px;
    }
  }

  // Smaller heading.
  &.__subheading {
    & .acf-input-wrap input {
      font-size: 20px;
      font-weight: bold;
      height: 32px;
    }
  }

  // For fields next to the subheading field, match the height.
  &.__height-match-subheading {
    & .acf-input-wrap input {
      height: 32px;
    }
  }

  // Rounded border so it looks like a button.
  &.__button {
    & .acf-input-wrap input {
      border-radius: 6px;
    }
  }

  // Inline labels.
  &.__inline-label {
    & .acf-label {
      float: left;
      margin-bottom: 0;
      margin-right: 2em;
      margin-top: 4px;
    }
  }

  // Reduce space and line before related toggle.
  &.__related,
  &.__related > td {
    border-top: 0 !important;
    padding-top: 0 !important;

    & .acf-checkbox-list label {
      color: #666;
      display: block;
      margin-top: -5px;
    }
  }

  // Indent field shown conditionally after a checkbox toggle.
  &.__after-toggle {
    & .acf-input {
      padding-left: 20px !important;

      & .acf-input-wrap {
        margin-top: -8px;
      }
    }
  }

  // Lists in instructions.
  & .acf-label ul li {
    margin-left: 1rem;
    list-style: square;
  }

  // Show instructions in a field suffix.
  &.__instructions-in-suffix {
    & > .acf-input-append {
      color: #aaa;
      font-size: 11px;
    }
  }

  // Hide instructions.
  &.__hide-instructions {
    & > .acf-label p.description,
    & > .acf-label p.description ~ p,
    & > .acf-label p.description ~ ol,
    & > .acf-label p.description ~ ul,
    & > .acf-label p.description ~ pre {
      display: none;
    }
  }

  // Small instructions.
  &.__instructions-small {
    & > .acf-label p.description {
      font-size: 11px;
    }
  }

  // Shorter heights for WYSIWYG fields.
  &.__wysiwyg-one-line {
    & iframe,
    & textarea {
      height: 50px !important;
      min-height: 50px !important;
    }
  }

  &.__wysiwyg-tiny {
    & iframe,
    & textarea {
      height: 90px !important;
      min-height: 90px !important;
    }
  }

  &.__wysiwyg-small {
    & iframe,
    & textarea {
      height: 150px !important;
      min-height: 150px !important;
    }
  }

  &.__wysiwyg-medium {
    & iframe,
    & textarea {
      height: 250px !important;
      min-height: 250px !important;
    }
  }

  &.__wysiwyg-large {
    & iframe,
    & textarea {
      height: 350px !important;
      min-height: 350px !important;
    }
  }

  // Taller heights for post lists in relationship fields.
  &.__relationship-list-medium {
    & .acf-relationship .list {
      height: 250px;
    }
  }

  &.__relationship-list-large {
    & .acf-relationship .list {
      height: 400px;
    }
  }

  &.__relationship-list-xl {
    & .acf-relationship .list {
      height: 550px;
    }
  }

  // Negative top margin on WYSIWYG fields so that the field label fits in the
  // empty space to the left of the 'Visual' and 'Text' tabs.
  &.__wysiwyg-collapse-label {
    & .acf-input {
      margin-top: -33px;
    }
  }

  // More top margin for collapsed WYSIWYG field in sidebar.
  .block-editor .edit-post-sidebar .acf-fields > .acf-field.__wysiwyg-collapse-label {
    margin-top: 25px;
  }

  // No border around checklists.
  &.__no-border {
    & .acf-input {
      // Remove border and scrolling from list of checkboxes.
      & .categorychecklist-holder {
        border: 0;
        max-height: inherit;
      }

      // Align list of checkboxes with edge of field.
      & .acf-radio-list,
      & .acf-checkbox-list {
        margin-top: -4px;
        padding: 0;
      }

      // Move (+) button in line with the checkboxes.
      & .acf-icon {
        right: 0;
        top: 0;
      }
    }
  }

  // Rows of checkboxes.
  &.__checkbox-columns.__columns-2 {
    & .acf-input {
      & .acf-checkbox-list {
        columns: 2;
      }
    }
  }

  &.__checkbox-columns.__columns-3 {
    & .acf-input {
      & .acf-checkbox-list {
        columns: 3;
      }
    }
  }
}

// Taxonomy radio buttons/checkboxes in a horizontal row.
.acf-field.__horizontal-list .acf-radio-list.acf-bl > li,
.acf-field.__horizontal-list .acf-checkbox-list.acf-bl > li {
  display: inline-block;

  & input {
    margin-right: 2px;
  }

  & + li {
    margin-left: 10px;
  }
}

// To have a non-full-length field always clear float.
.acf-field.__clear-float {
  clear: left !important;
}

// To have a non-full-length field always clear float. Useful when combining
// conditional fields with percentage-width fields.
.acf-field[data-width].__no-left-border {
  border-left: 0 !important;
}

// Hidden labels.
.acf-fields.-top .acf-field.__hide-label {
  // Only for the topmost label in this field.
  & > .acf-label {
    margin-bottom: 0;

    // Hide label.
    & label {
      display: none;
    }

    & p.description {
      // Provide space between description/instructions and field below it.
      margin-bottom: 12px;

      // Still show field description/instructions.
      margin-top: 0 !important;
    }
  }
}

.acf-fields.-left .acf-field.__hide-label {
  // Remove false background and dividing line.
  &::before {
    display: none !important;
  }

  // Hide label.
  & > .acf-label {
    margin-bottom: 0;

    & label {
      display: none;
    }
  }

  // Make field now take up entire container.
  & > .acf-input {
    width: 100% !important;
  }
}

// If this is just a message meant to conditionally show up under a related
// field, and if field titles are on the left, then indent it and add the
// false background back in.
.acf-fields.-left .acf-field.acf-field-message.__related.__hide-label {
  &::before {
    display: block !important;
  }

  & > .acf-input {
    float: right !important;
    width: 80% !important;
  }
}

// Hidden labels in Gutenberg.
.acf-block-component .acf-field.__hide-label {
  & > .acf-label {
    margin-bottom: 0;

    & label {
      display: none;
    }
  }
}

// Hide the repeater field label but not any of its children field labels.
.acf-field.__hide-repeater-label {
  // Remove false background and dividing line.
  &::before {
    display: none !important;
  }

  // Hide label.
  & > .acf-label {
    display: none;
  }

  // Make field now take up entire container.
  & > .acf-input {
    width: 100% !important;
  }
}

// Add top padding if first field is conditionally hidden.
.acf-field.acf-hidden:first-child + .acf-field.__related {
  padding-top: 12px !important;
}

// Hide table header.
.acf-field.__hide-table-header .-table thead {
  display: none;
}

// Hide TinyMCE advanced in WYSIWYG editor.
.acf-field.__hide-tinymce-advanced {
  & .mce-menubar[role="menubar"] {
    display: none;
  }
}

// Reduce vertical padding around message fields.
.acf-field.__reduce-message-padding {
  padding-bottom: 0 !important;
  padding-top: 0 !important;
}

// No padding for groups or nested clones.
.acf-field-group.__no-group-border-or-padding > .acf-input {
  & > .acf-fields {
    border: 0;
  }

  & > .acf-fields > .acf-field {
    padding: 12px 0;
  }

  & > .acf-fields > .acf-field:first-child {
    padding-top: 0;
  }
}

// Fix styling of group headings in Gutenberg sidebar.
.block-editor .edit-post-sidebar .acf-postbox h2.hndle {
  padding: 0 16px !important;
  font-size: 13px !important;
  font-weight: 500 !important;
}

// No padding for groups in Gutenberg sidebar.
.block-editor .edit-post-sidebar .acf-fields > .acf-field.__no-group-border-or-padding .acf-field {
  margin: 0;
}

// Remove top margin for `__related` fields in Gutenberg sidebar.
.block-editor .edit-post-sidebar .acf-fields > .acf-field.__related {
  margin-top: 0 !important;
}

// Remove borders around lists in Gutenberg sidebar.
.block-editor .edit-post-sidebar .acf-fields > .acf-field.__no-list-border {
  & .categorychecklist-holder {
    border: 0;
  }

  & .acf-checkbox-list {
    padding: 3px 0;
  }
}

// No padding for groups in Gutenberg ACF blocks.
.acf-field.__no-group-border-or-padding .acf-fields.-left > .acf-field > .acf-input {
  padding: 0;
}

// Add some padding between fields that aren't full-width.
.acf-field-group.__no-group-border-or-padding > .acf-input > .acf-fields > .acf-field[data-width] {
  border-left: 0;
  padding-right: 12px;
}

.acf-field-group.__no-group-border-or-padding > .acf-input > .acf-fields > .acf-field[data-width]:last-child {
  padding-right: 0;
}

// Reduce right margin on horizontal list items.
ul.acf-radio-list.acf-hl {
  & li {
    margin-right: 15px;
  }

  // Remove right margin on final list item in horizontal lists.
  & li:last-child {
    margin-right: 0;
  }
}

// Hide unnecessary 'Alt Text' and 'Description' fields in gallery image editor.
.acf-gallery-side-data tr[data-name="alt"],
.acf-gallery-side-data tr[data-name="description"] {
  display: none;
}

// Formatting of paragraphs and more in field descriptions.
.acf-field .acf-label {
  & p {
    margin-top: 6px !important;
  }

  & pre {
    background-color: #eee;
    border-radius: 5px;
    margin: 8px 0 15px 0;
    padding: 5px 10px;
  }
}

// Move minus buttons to the top of the column.
.acf-repeater .acf-row-handle .acf-icon.-minus {
  top: 30px !important;
}

// If a group is used within a seamless box, enclose its title in a box so it
// looks like its own contained field group.
.acf-postbox.seamless > .acf-fields > .acf-field-group > .acf-label {
  background: #fff;
  border-left: 1px solid $border-color;
  border-right: 1px solid $border-color;
  border-top: 1px solid $border-color;
  font-size: 14px;
  font-weight: bold;
  margin: 0;
  padding: 8px 12px 4px 12px;
}

// Style a single field to look like a contained field group.
.acf-field.__group {
  & > .acf-label {
    background: #fff;
    border-left: 1px solid $border-color;
    border-right: 1px solid $border-color;
    border-top: 1px solid $border-color;
    margin: 0;
    padding: 8px 12px 4px 12px;

    & label {
      font-size: 14px;
      font-weight: bold;
    }
  }

  & > .acf-input {
    background: #fff;
    border: 1px solid #ccd0d4;
    padding: 15px 12px;
  }
}

// Hide the 'Add Row' button.
.acf-field.__hide-add-row-button .acf-actions {
  display: none;
}

// Hide the +/- buttons for adding/removing layouts in a flexible layout field.
.acf-field.__hide-layout-buttons .acf-fc-layout-controls .af-icon.-plus,
.acf-field.__hide-layout-buttons .acf-fc-layout-controls .af-icon.-minus {
  display: none !important;
}

